V5.3.7
* Deny players to use BagOfGold in all other slottypes than QuickBar and Container.
V5.3.6
* Added player skin cache to mh_Players
* Fixed support for CraftBukkit
V5.3.5
* Fixed /mh version
* Tested and fixed rewards for PVP kills.
V5.3.4
* Fixed bug in the new Updating system
V5.3.3
* Fixed NoClassDefFoundError when using /mh bag buy 40 (https://www.spigotmc.org/threads/mobhunting.46937/page-151#post-2823813)
* Fixed bug in the new Updating system
V5.3.2
* Updating system changed from BukkitUpdater to SpigetUpdater (http://spiget.org) Curse broke my updating system again again :-(
* Language files updated
V5.3.1
* Changed how Player Balance is calculated, when using my BagOfGold plugin. Now using a much more simple and safe way :-) I really hope its become stable now. Thank you to @CampingSteve for a great help with the testing BagOfGOld.
V5.3.0 
* Important bug fixing on Player Balance if you use my BagOfGold plugin
* If you have drop-money-use-item-as-currency=false then /mh money give player 25 is the same as /eco give player 25, and /mh money take player 25 is the same as /eco take player 25. And you can't sell & buy BagOfGold.
* Language files was updated.
* BagOfGold Balance Sign added. To see the Economy Balance or the number of BagOfGold in the inventory
* Change: BagOfGold can't be used as a helmet. The normal mob heads (MobHunting rewards) can.
* Changed the balance when the player dies and the BagOfGold is dropped in the ground.
V5.2.9
* Fixed /mh bag give ..... when NOT using BagOfGold. ( https://www.spigotmc.org/threads/mobhunting.46937/page-149#post-2813296 )
V5.2.8
* Fixed ticket 335 (https://github.com/Rocologo/MobHunting/issues/335)
V5.2.7
* Fixed bug in player balance when changing between Creative and Survival after giving BagOfGOld to the player
V5.2.6
* Fixed a balance bug, when moving rewards between Inventories.
* hu_HU.lang updated by @montlikadani - Thank you!
V5.2.5
* Trying to fix /mh head give...